<resources>
    <string name="app_name">SMS_BEB</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="todo">TODO</string>
    <string name="pilih_alasan">Pilih Alasan</string>
    <string name="submit">Submit</string>

    <string-array name="list_alasan">
        <item>Sakit</item>
        <item>Izin</item>
    </string-array>
</resources>
